Finally fixed github pages issuse and fixed issue where it didn't display on mobile, made changes to the camera logic, css and shaders

--- a/dev-portfolio/style.css
+++ b/dev-portfolio/style.css
@@ -30,10 +30,19 @@ body,
 html {
   height: 100vh;
   margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  padding: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
   background-color: var(--color1);
+}
+
+#game {
+  width: 100vw !important;
+  height: 100vh !important;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 /* modal container */
@@ -100,7 +109,7 @@ p {
   position: fixed;
   top: 5vh;
   right: 5vw;
-  /* z-index: 1; */
+  z-index: 1000;
   gap: 1vh;
 }
 
@@ -128,4 +137,5 @@ p {
   font-size: 1.2rem;
   max-width: 40vw;
   user-select: none;
+  z-index: 1000;
 }
